# filtration

./: Array2D.hpp  ArrayFunctions.cpp  CMakeLists.txt  ChemicalKinetics.cpp  ChemicalKinetics.h  Common.h  CommonPhaseBalance.h  CompoundParameters.hpp  EnergyTransfer.cpp  Filt.h  Functions.cpp  LinearAlgebra.h  Logger.h  Main.cpp  MassTransfer.cpp  PhaseSolver.cpp  PhaseSolver.h  Props.h  README.md  Util.h  Visualizer.cpp  Well.cpp  Well.hpp
